--- a/training_pipeline.ipynb
+++ b/training_pipeline.ipynb
@@ -145,10 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "6fb794a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import transformers\n",
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "f2659a94",
    "metadata": {},
    "outputs": [],
@@ -281,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "07c61a51",
    "metadata": {},
    "outputs": [],
@@ -299,29 +308,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "89907275",
+   "execution_count": 30,
+   "id": "ac481bf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataset = dataframe[0:100]\n",
-    "\n",
-    "X = dataset[\"text\"]\n",
-    "y = dataset[\"label\"]\n",
-    "\n",
-    "X_train, y_train, X_test, y_test = train_test_split(X, y, train_size=0.8, random_state=42)\n",
-    "\n"
+    "dataframe[\"label\"][1900]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "89907275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = dataframe[0:5000]\n",
+    "\n",
+    "random_dataset = dataset.sample(n=2000, axis=0, random_state=40)\n",
+    "\n",
+    "X = dataset[\"text\"]\n",
+    "y = dataset[\"label\"]\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = train_test_split(X, y, train_size=0.8, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "2ec45488",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>paragraph</th>\n",
+       "      <th>sentence_nr</th>\n",
+       "      <th>text</th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>party</th>\n",
+       "      <th>preceding_sentence</th>\n",
+       "      <th>succeeding_sent</th>\n",
+       "      <th>current_speaker_in_government</th>\n",
+       "      <th>parties_in_government</th>\n",
+       "      <th>date</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4088</th>\n",
+       "      <td>94</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Så er fordelen ved retoriske spørgsmål selvføl...</td>\n",
+       "      <td>Søren Søndergaard</td>\n",
+       "      <td>EL</td>\n",
+       "      <td>Man vil både have i pose og sæk, og man vil  i...</td>\n",
+       "      <td>Når en eller anden narkoman begår et  indbrud,...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[S, RV]</td>\n",
+       "      <td>1997-10-09</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2080</th>\n",
+       "      <td>2</td>\n",
+       "      <td>106</td>\n",
+       "      <td>Vi har vist, at et  flittigt folk er at finde ...</td>\n",
+       "      <td>Poul Nyrup Rasmussen</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Danmark er i fremgang, og  håbet og troen på f...</td>\n",
+       "      <td>Regeringen har gennem sin økonomiske politik -...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>[S, RV]</td>\n",
+       "      <td>1997-10-07</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>183</td>\n",
+       "      <td>97</td>\n",
+       "      <td>De folk, der står bagest, er taberne.</td>\n",
+       "      <td>Poul Nyrup Rasmussen</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Taberne er de folk, der er  dårligst uddannede...</td>\n",
+       "      <td>Jeg siger det for god ordens skyld, for det er...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>[S, RV]</td>\n",
+       "      <td>1997-10-09</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>13630</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Men det skal også siges, at  regeringens liv h...</td>\n",
+       "      <td>Holger K. Nielsen</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>Folketingsvalget var udtryk for en kamp om, hv...</td>\n",
+       "      <td>Og det bør regeringen have i baghovedet, når d...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[S, RV]</td>\n",
+       "      <td>1998-06-25</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>6487</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Jeg mener, at det er de i ånden svage  dansker...</td>\n",
+       "      <td>Arne Melchior</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>I øvrigt interesserer jeg mig slet ikke så meg...</td>\n",
+       "      <td>Der har heldigvis været en række  ordførere, d...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[S, RV]</td>\n",
+       "      <td>1998-01-22</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      paragraph  sentence_nr  \\\n",
+       "4088         94            5   \n",
+       "2080          2          106   \n",
+       "41          183           97   \n",
+       "796       13630            3   \n",
+       "354        6487           25   \n",
+       "\n",
+       "                                                   text               speaker  \\\n",
+       "4088  Så er fordelen ved retoriske spørgsmål selvføl...     Søren Søndergaard   \n",
+       "2080  Vi har vist, at et  flittigt folk er at finde ...  Poul Nyrup Rasmussen   \n",
+       "41                De folk, der står bagest, er taberne.  Poul Nyrup Rasmussen   \n",
+       "796   Men det skal også siges, at  regeringens liv h...     Holger K. Nielsen   \n",
+       "354   Jeg mener, at det er de i ånden svage  dansker...         Arne Melchior   \n",
+       "\n",
+       "     party                                 preceding_sentence  \\\n",
+       "4088    EL  Man vil både have i pose og sæk, og man vil  i...   \n",
+       "2080     S  Danmark er i fremgang, og  håbet og troen på f...   \n",
+       "41       S  Taberne er de folk, der er  dårligst uddannede...   \n",
+       "796     SF  Folketingsvalget var udtryk for en kamp om, hv...   \n",
+       "354     CD  I øvrigt interesserer jeg mig slet ikke så meg...   \n",
+       "\n",
+       "                                        succeeding_sent  \\\n",
+       "4088  Når en eller anden narkoman begår et  indbrud,...   \n",
+       "2080  Regeringen har gennem sin økonomiske politik -...   \n",
+       "41    Jeg siger det for god ordens skyld, for det er...   \n",
+       "796   Og det bør regeringen have i baghovedet, når d...   \n",
+       "354   Der har heldigvis været en række  ordførere, d...   \n",
+       "\n",
+       "      current_speaker_in_government parties_in_government       date  label  \n",
+       "4088                          False               [S, RV] 1997-10-09      0  \n",
+       "2080                           True               [S, RV] 1997-10-07      0  \n",
+       "41                             True               [S, RV] 1997-10-09      1  \n",
+       "796                           False               [S, RV] 1998-06-25      1  \n",
+       "354                           False               [S, RV] 1998-01-22      1  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "2836e682",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 2000/2000 [00:04<00:00, 415.12 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# From dataframe to dataset for mapping tokenizer function \n",
-    "dataset = Dataset.from_pandas(dataset)\n",
+    "dataset = Dataset.from_pandas(random_dataset)\n",
     "\n",
     "def tokenize_function(example):\n",
     "    return tokenizer(example[\"text\"], padding=\"max_length\", truncation=True)\n",
