--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "eadecd87",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "458612b9",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "03466eeb",
    "metadata": {},
    "outputs": [],
@@ -46,24 +46,15 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-=======
-   "execution_count": null,
->>>>>>> 331fff9 (hello)
+   "execution_count": 18,
    "id": "12a1768c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Open the blame data and make entry called label = 1\n",
     "\n",
-<<<<<<< HEAD
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        blame_data = json.load(f)\n",
-=======
     "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    blame_data = json.load(f)\n",
->>>>>>> 331fff9 (hello)
     "\n",
     "for entry in blame_data:\n",
     "    entry[\"label\"] = 1\n",
@@ -73,18 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "9cb81d90",
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "        no_blame_data = json.load(f)\n",
-=======
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_collapsed_sentences_5_and_4_and_3_and_2_and_1.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    no_blame_data = json.load(f)\n",
->>>>>>> 331fff9 (hello)
     "\n",
     "for entry in no_blame_data:\n",
     "    entry[\"label\"] = 0\n",
@@ -93,15 +79,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "12a152cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "#save data\n",
     "\n",
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(all_training_data, f, ensure_ascii=False, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "35b28a38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "399018"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_training_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3eaf3dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted 176 entries from the main dataset.\n",
+      "Cleaned dataset saved to /work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#delete entries also in validation data\n",
+    "\n",
+    "# --- File paths ---\n",
+    "main_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\"          # The original dataset\n",
+    "exclude_file = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\"   # The dataset containing entries to delete\n",
+    "output_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json\"\n",
+    "\n",
+    "# --- Load both files ---\n",
+    "with open(main_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "    main_data = json.load(f)\n",
+    "\n",
+    "with open(exclude_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "    exclude_data = json.load(f)\n",
+    "\n",
+    "# --- Create a set of (paragraph, sentence_nr) pairs to remove ---\n",
+    "exclude_pairs = {\n",
+    "    (str(entry.get(\"paragraph\")), str(entry.get(\"sentence_nr\")))\n",
+    "    for entry in exclude_data\n",
+    "}\n",
+    "\n",
+    "# --- Filter out matching entries from the main dataset ---\n",
+    "filtered_data = [\n",
+    "    entry for entry in main_data\n",
+    "    if (str(entry.get(\"paragraph\")), str(entry.get(\"sentence_nr\"))) not in exclude_pairs\n",
+    "]\n",
+    "\n",
+    "# --- Calculate and report how many were removed ---\n",
+    "deleted_count = len(main_data) - len(filtered_data)\n",
+    "print(f\"Deleted {deleted_count} entries from the main dataset.\")\n",
+    "\n",
+    "# --- Save the cleaned data ---\n",
+    "with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "print(f\"Cleaned dataset saved to {output_file}.\")\n"
    ]
   },
   {
@@ -117,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "blame_bert",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
