Bøvling with auto labels from tokenizer

--- a/SRL.ipynb
+++ b/SRL.ipynb
@@ -32,7 +32,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\runet\\anaconda3\\envs\\training\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
             "  from .autonotebook import tqdm as notebook_tqdm\n"
           ]
         },
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -277,11 +277,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Map: 100%|██████████| 171289/171289 [04:25<00:00, 645.43 examples/s]\n",
+            "Map: 100%|██████████| 15036/15036 [00:24<00:00, 624.09 examples/s]\n",
+            "Map: 100%|██████████| 15366/15366 [00:24<00:00, 632.06 examples/s]\n"
+          ]
+        }
+      ],
       "source": [
         "dataset = load_dataset(\"mlburnham/Pol_NLI\")\n",
+        "\n",
         "\n",
         "def tokenize_function(example):\n",
         "    return tokenizer(example[\"premise\"], padding=\"max_length\", truncation=True)\n",
@@ -292,7 +303,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "DatasetDict({\n",
+              "    train: Dataset({\n",
+              "        features: ['premise', 'hypothesis', 'labels', 'dataset', 'task', 'augmented_hypothesis', 'input_ids', 'attention_mask'],\n",
+              "        num_rows: 171289\n",
+              "    })\n",
+              "    validation: Dataset({\n",
+              "        features: ['premise', 'hypothesis', 'labels', 'dataset', 'task', 'augmented_hypothesis', 'input_ids', 'attention_mask'],\n",
+              "        num_rows: 15036\n",
+              "    })\n",
+              "    test: Dataset({\n",
+              "        features: ['premise', 'hypothesis', 'labels', 'dataset', 'task', 'augmented_hypothesis', 'input_ids', 'attention_mask'],\n",
+              "        num_rows: 15366\n",
+              "    })\n",
+              "})"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tokenized_dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -304,7 +348,7 @@
               "})"
             ]
           },
-          "execution_count": 61,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -316,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -326,16 +370,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Column(['This text describes a hostage taking (kidnapping)', 'This text is attacking people for their place of origin.', 'This text is about defense r&d.', 'This text is about voting rights.', 'This text is dehumanizing people for their race.'])"
+              "Dataset({\n",
+              "    features: ['premise', 'hypothesis', 'labels', 'dataset', 'task', 'augmented_hypothesis', 'input_ids', 'attention_mask'],\n",
+              "    num_rows: 100\n",
+              "})"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -346,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 20,
       "metadata": {
         "id": "i2PnPqvvmhMG"
       },
@@ -373,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -384,13 +431,13 @@
         "    predictions = np.argmax(predictions, axis=1)\n",
         "    return {\n",
         "        'accuracy': accuracy_score(labels, predictions),\n",
-        "        'f1': f1_score(labels, predictions, average='weighted')\n",
+        "        'f1': f1_score(labels, predictions, average='macro')\n",
         "    }"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -407,7 +454,7 @@
               "    <div>\n",
               "      \n",
               "      <progress value='27' max='27' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [27/27 06:42, Epoch 3/3]\n",
+              "      [27/27 02:53, Epoch 3/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -422,24 +469,24 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
-              "      <td>2.109100</td>\n",
-              "      <td>0.985361</td>\n",
-              "      <td>0.450000</td>\n",
-              "      <td>0.457333</td>\n",
+              "      <td>2.686000</td>\n",
+              "      <td>0.928845</td>\n",
+              "      <td>0.550000</td>\n",
+              "      <td>0.548872</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>5.083000</td>\n",
-              "      <td>0.974652</td>\n",
-              "      <td>0.450000</td>\n",
-              "      <td>0.457333</td>\n",
+              "      <td>3.367200</td>\n",
+              "      <td>0.885876</td>\n",
+              "      <td>0.550000</td>\n",
+              "      <td>0.548872</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>4.682100</td>\n",
-              "      <td>0.971707</td>\n",
-              "      <td>0.450000</td>\n",
-              "      <td>0.457333</td>\n",
+              "      <td>2.656000</td>\n",
+              "      <td>0.873193</td>\n",
+              "      <td>0.550000</td>\n",
+              "      <td>0.548872</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
@@ -454,10 +501,10 @@
         {
           "data": {
             "text/plain": [
-              "TrainOutput(global_step=27, training_loss=10.236043294270834, metrics={'train_runtime': 417.4004, 'train_samples_per_second': 0.719, 'train_steps_per_second': 0.065, 'total_flos': 1643610193920000.0, 'train_loss': 10.236043294270834, 'epoch': 3.0})"
+              "TrainOutput(global_step=27, training_loss=9.018679018373843, metrics={'train_runtime': 197.4226, 'train_samples_per_second': 1.52, 'train_steps_per_second': 0.137, 'total_flos': 1643610193920000.0, 'train_loss': 9.018679018373843, 'epoch': 3.0})"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -893,7 +940,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "training",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -907,7 +954,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.23"
+      "version": "3.12.11"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
