Added a few points to to do

--- a/training_pipeline.ipynb
+++ b/training_pipeline.ipynb
@@ -13,6 +13,7 @@
     "- Early stopping: load_best_model_at_end=True\n",
     "- Split into validation set as well (80:10:10)\n",
     "- Hyperparameter tuning (Alpha, learning rate, batch size so on - not sure how to figure this out)\n",
+    "    - There is precedence for no hyperparameter tuning from the author of the OG NLI model that DEBATE is based on = Due to computational restrains and the points from this paper, no hyperparameter tuning was performed in this case. The model tuning in itself is also not the primary focus in this paper, but simply serves as a tool for the actual inquiry into blame in the Danish Parliament\n",
     "- Context / No context?\n",
     "    - Most likely no context, as we do not have the academic reasons for doing so \n",
     "    - Model actually also seems to perform better without (f1 of .66 for no context on random test set vs. . 55 on gold labelled for context model) This might also make sense as the context is not taken into account in the DEBATE model\n"
