training data in the making

--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "eadecd87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import json\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "random.seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "458612b9",
    "metadata": {},
    "outputs": [],
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "03466eeb",
    "metadata": {},
    "outputs": [],
@@ -113,7 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
+   "id": "9db6b626",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- File paths ---\n",
+    "main_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\"          # The original dataset\n",
+    "exclude_file = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\"   # The dataset containing entries to delete\n",
+    "output_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3eaf3dda",
    "metadata": {},
    "outputs": [
@@ -129,10 +146,6 @@
    "source": [
     "#delete entries also in validation data\n",
     "\n",
-    "# --- File paths ---\n",
-    "main_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\"          # The original dataset\n",
-    "exclude_file = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\"   # The dataset containing entries to delete\n",
-    "output_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json\"\n",
     "\n",
     "# --- Load both files ---\n",
     "with open(main_file, \"r\", encoding=\"utf-8\") as f:\n",
@@ -166,23 +179,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b7c51d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make a subset of this dataset holding 1800 blame = 1 and 1800 blame = 0\n",
+    "\n",
+    "with open(output_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "    full_training_data = json.load(f)\n",
+    "\n",
+    "\n",
+    "# Separate entries by label\n",
+    "label_0 = [entry for entry in full_training_data if entry[\"label\"] == 0]\n",
+    "label_1 = [entry for entry in full_training_data if entry[\"label\"] == 1]\n",
+    "\n",
+    "# Randomly sample 2000 from each\n",
+    "subset_0 = random.sample(label_0, 1800)\n",
+    "subset_1 = random.sample(label_1, 1800)\n",
+    "\n",
+    "# Combine and shuffle\n",
+    "subset = subset_0 + subset_1\n",
+    "random.shuffle(subset)\n",
+    "\n",
+    "# Save subset\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json\", \"w\") as f:\n",
+    "    json.dump(subset, f, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "008b2c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    test_test = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0854b294",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "398842"
+       "3600"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(filtered_data)"
+    "len(test_test)"
    ]
   },
   {
