--- a/training_pipeline.ipynb
+++ b/training_pipeline.ipynb
@@ -138,9 +138,10 @@
     "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir='./results',\n",
-    "    learning_rate=2e-5,\n",
+    "    learning_rate=8e-4, # Learning rate copied from mmBERT paper as they found this to perform best\n",
     "    num_train_epochs=3,\n",
     "    per_device_train_batch_size=8,\n",
+    "    per_device_eval_batch_size=8,\n",
     "    auto_find_batch_size=True, # Allows for auto adjusting of batch to avoid OOM\n",
     "    gradient_accumulation_steps=12,  # Simulate larger batch size\n",
     "\n",
@@ -171,7 +172,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "id": "69c3942d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From dataframe to dataset for mapping tokenizer function \n",
+    "#dataset = Dataset.from_pandas(random_dataset)\n",
+    "\n",
+    "def tokenize_function(example):\n",
+    "    combined_text = (\n",
+    "        example[\"preceding_sentence\"] + \" [SEP] \" +\n",
+    "        example[\"text\"] + \" [SEP] \" +\n",
+    "        example[\"succeeding_sent\"]\n",
+    "    )\n",
+    "    return tokenizer(\n",
+    "        combined_text,\n",
+    "        padding=\"max_length\",\n",
+    "        truncation=True\n",
+    "    )\n",
+    "\n",
+    "#tokenized_dataset = dataset.map(tokenize_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a4402b90",
    "metadata": {},
    "outputs": [
@@ -188,33 +214,7 @@
     "\n",
     "val_dataset = Dataset.from_pandas(val_dataframe)\n",
     "\n",
-    "\n",
-    "\n",
     "tokenized_val = val_dataset.map(tokenize_function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "de5808cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['preceding_sentence', 'text', 'succeeding_sent', 'label', 'input_ids', 'attention_mask'],\n",
-       "    num_rows: 176\n",
-       "})"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenized_val"
    ]
   },
   {
@@ -265,7 +265,7 @@
    ],
    "source": [
     "# From dataframe to dataset for mapping tokenizer function \n",
-    "dataset = Dataset.from_pandas(random_dataset)\n",
+    "#dataset = Dataset.from_pandas(random_dataset)\n",
     "\n",
     "def tokenize_function(example):\n",
     "    combined_text = (\n",
@@ -279,7 +279,7 @@
     "        truncation=True\n",
     "    )\n",
     "\n",
-    "tokenized_dataset = dataset.map(tokenize_function)"
+    "#tokenized_dataset = dataset.map(tokenize_function)"
    ]
   },
   {
