--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "eadecd87",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "458612b9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "03466eeb",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "12a1768c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Open the blame data and make entry called label = 1\n",
     "\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    blame_data = json.load(f)\n",
     "\n",
     "for entry in blame_data:\n",
@@ -68,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "9cb81d90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/NO_BLAME_sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/NO_BLAME_sentences_in_five_templates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    no_blame_data = json.load(f)\n",
     "\n",
     "for entry in no_blame_data:\n",
@@ -83,20 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "12a152cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "#save data\n",
     "\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/training_data.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(all_training_data, f, ensure_ascii=False, indent=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "35b28a38",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "399018"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,20 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "9db6b626",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- File paths ---\n",
-    "main_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/training_data.json\"          # The original dataset\n",
-    "exclude_file = \"/work/MarkusLundsfrydJensen#1865/Bachelor_project/Model_data/validation_set.json\"   # The dataset containing entries to delete\n",
-    "output_file = \"/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json\"\n"
+    "main_file = \"/work/RuneEgeskovTrust#9638/Bachelor/training_data/training_data.json\"          # The original dataset\n",
+    "exclude_file = \"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Model_data/validation_set.json\"   # The dataset containing entries to delete\n",
+    "output_file = \"/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data.json\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "3eaf3dda",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "Deleted 176 entries from the main dataset.\n",
-      "Cleaned dataset saved to /work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json.\n"
+      "Cleaned dataset saved to /work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data.json.\n"
      ]
     }
    ],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b7c51d68",
    "metadata": {},
    "outputs": [],
@@ -203,24 +203,24 @@
     "random.shuffle(subset)\n",
     "\n",
     "# Save subset\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json\", \"w\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_cleaned_training_data.json\", \"w\") as f:\n",
     "    json.dump(subset, f, indent=2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "008b2c19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_cleaned_training_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    test_test = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "0854b294",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "3600"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "blame_bert",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
