subset and training data notebook made ready

--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -179,64 +179,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b7c51d68",
    "metadata": {},
    "outputs": [],
    "source": [
     "#make a subset of this dataset holding 1800 blame = 1 and 1800 blame = 0\n",
     "\n",
-    "with open(output_file, \"r\", encoding=\"utf-8\") as f:\n",
-    "    full_training_data = json.load(f)\n",
+    "def make_subset(n = 1800, base_data_file_path = '', subset_file_path = ''):\n",
+    "    with open(base_data_file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        full_training_data = json.load(f)\n",
     "\n",
     "\n",
-    "# Separate entries by label\n",
-    "label_0 = [entry for entry in full_training_data if entry[\"label\"] == 0]\n",
-    "label_1 = [entry for entry in full_training_data if entry[\"label\"] == 1]\n",
+    "    # Separate entries by label\n",
+    "    label_0 = [entry for entry in full_training_data if entry[\"label\"] == 0]\n",
+    "    label_1 = [entry for entry in full_training_data if entry[\"label\"] == 1]\n",
     "\n",
-    "# Randomly sample 2000 from each\n",
-    "subset_0 = random.sample(label_0, 1800)\n",
-    "subset_1 = random.sample(label_1, 1800)\n",
+    "    # Randomly sample 2000 from each\n",
+    "    subset_0 = random.sample(label_0, n)\n",
+    "    subset_1 = random.sample(label_1, n)\n",
     "\n",
-    "# Combine and shuffle\n",
-    "subset = subset_0 + subset_1\n",
-    "random.shuffle(subset)\n",
+    "    # Combine and shuffle\n",
+    "    subset = subset_0 + subset_1\n",
+    "    random.shuffle(subset)\n",
     "\n",
-    "# Save subset\n",
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_cleaned_training_data.json\", \"w\") as f:\n",
-    "    json.dump(subset, f, indent=2)\n"
+    "    # Save subset\n",
+    "    with open(subset_file_path, \"w\") as f:\n",
+    "        json.dump(subset, f, indent=2)\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "make_subset(n = 3600, \n",
+    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json',\n",
+    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "008b2c19",
+   "execution_count": null,
+   "id": "5d70ff42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_cleaned_training_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    test_test = json.load(f)"
+    "#Now make data for five and Four tempaltes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca9cc31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_blame_by_template(base_file_path ='', mod_temp_path = '', output_path ='' ):\n",
+    "    # Load data\n",
+    "    with open(base_file_path, \"r\", encoding=\"utf-8\") as f: \n",
+    "        cl_tr_data = json.load(f)\n",
+    "\n",
+    "    with open(mod_temp_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        four_temps_blame = json.load(f)\n",
+    "\n",
+    "    # Build a lookup set for fast matching\n",
+    "    four_temps_keys = {(item[\"paragraph\"], item[\"sentence_nr\"]) for item in four_temps_blame}\n",
+    "\n",
+    "    # Track matches for validation\n",
+    "    found_count = 0\n",
+    "\n",
+    "    for entry in cl_tr_data:\n",
+    "        key = (entry[\"paragraph\"], entry[\"sentence_nr\"])\n",
+    "        if key in four_temps_keys:\n",
+    "            if entry[\"label\"] == 0:\n",
+    "                entry[\"label\"] = 1\n",
+    "                found_count += 1\n",
+    "            else:\n",
+    "                raise ValueError(f\"Entry {key} already has label=1 (should have been 0).\")\n",
+    "\n",
+    "    # Save updated data\n",
+    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(cl_tr_data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"✅ Updated {found_count} entries successfully.\")\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "change_blame_by_template(\n",
+    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json', \n",
+    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_four_templates.json', \n",
+    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "83af4147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create subset of 3600\n",
+    "\n",
+    "random.seed(52)\n",
+    "\n",
+    "make_subset(n = 1800, \n",
+    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json',\n",
+    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_4_5_cleaned_training_data.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbc886c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now for five, four and three templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c6ba995f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Updated 768 entries successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "change_blame_by_template(\n",
+    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_three_templates.json', \n",
+    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9a3af98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make subset of this\n",
+    "random.seed(62)\n",
+    "make_subset(n = 1800, \n",
+    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_3_4_5_cleaned_training_data.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "610786bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now for five, four, three and two templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "22d1e238",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Updated 988 entries successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "change_blame_by_template(\n",
+    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_two_templates.json', \n",
+    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json' )\n",
+    "\n",
+    "\n",
+    "#make subset of this\n",
+    "random.seed(72)\n",
+    "make_subset(n = 1800, \n",
+    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_2_3_4_5_cleaned_training_data.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec312c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now for five, four, three, two and one templates"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0854b294",
+   "id": "382c21c2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3600"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Updated 1998 entries successfully.\n"
+     ]
     }
    ],
    "source": [
-    "len(test_test)"
+    "change_blame_by_template(\n",
+    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_one_templates.json', \n",
+    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json' )\n",
+    "\n",
+    "\n",
+    "#make subset of this\n",
+    "random.seed(82)\n",
+    "make_subset(n = 1800, \n",
+    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_1_2_3_4_5_cleaned_training_data.json')"
    ]
   },
   {
@@ -252,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "blame_bert",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
